config.main.json

--- a/config/config.main.json
+++ b/config/config.main.json
@@ -16,12 +16,12 @@
     "LANGUAGE": "en_US",
     "LOG_LEVEL": 1,
     "MODERATORS": [
-        "PUT YOUR UID HERE"
+        "100012417463682"
     ],
     "ABSOLUTES": [
-        "PUT YOUR UID HERE"
+        "100012417463682"
     ],
-    "NAME": "𝙼𝚘𝚌𝚑𝚊 𝙰𝚒",
+    "NAME": "𝙇𝙪𝙛𝙛𝙮𝘽𝙤𝙩𝙑4",
     "PREFIX": "-",
     "timezone": "Asia/Manila",
     "REFRESH": "43200000"
